<resources>
    <string name="app_name">QuizApp</string>
    <string name="Anime_Title">アニメタイトルへ</string>
    <string name="Title_btn">タイトルへ</string>
    <string name="Janru">ジャンルへ</string>
    <string name="Answer_Result">解答結果</string>
    <string name="Correct">〇問中〇問正解</string>
    <string name="Number">番号</string>
    <string name="True_False">正誤</string>
    <string name="Anser">解</string>
    <string name="You">あなた</string>
    <string name="animeTitle_select">アニメタイトル選択</string>
    <string name="select">全選択</string>
    <string name="deselect">全選択解除</string>
    <string name="back">戻る</string>
    <string name="submit">確定する</string>
    <string name="Genre_selection">ジャンル選択画面</string>
    <string name="questions">問出題</string>
    <string name="question_number">全５０問中</string>
    <string name="question_title">問題数選択</string>
    <string name="next_btn">次の画面へ</string>
    <string name="result_btn">結果画面へ</string>
    <string name="quiz_title">○問題</string>
    <string name="quiz_count">○問中 ○問目</string>
    <string name="quiz_text">問○\n―――――――――――――\n―――――――――――――\n―――――――――――――\n―――――――――――――</string>
    <string name="a_text">A --</string>
    <string name="b_text">B --</string>
    <string name="c_text">C --</string>
    <string name="d_text">D --</string>
    <string name="e_text">E --</string>
</resources>
